--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@tauri-apps/plugin-os": "~2.3.2",
+    "@tauri-apps/plugin-store": "~2.4.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "@tauri-apps/api": "^2.9.1",
