--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@tauri-apps/plugin-dialog": "~2.6.0",
     "@tauri-apps/plugin-os": "~2.3.2",
     "@tauri-apps/plugin-store": "~2.4.2",
+    "@tauri-apps/plugin-upload": "~2.4.0",
+    "prismjs": "^1.30.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-opener": "^2.5.3",
     "react-icons": "^5.5.0",
+    "react-simple-code-editor": "^0.14.1",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
