--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/plugin-dialog": "~2.6.0",
     "@tauri-apps/plugin-os": "~2.3.2",
+    "@tauri-apps/plugin-shell": "~2.3.4",
     "@tauri-apps/plugin-store": "~2.4.2",
     "@tauri-apps/plugin-upload": "~2.4.0",
     "prismjs": "^1.30.0",
