--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,4 +22,5 @@ tauri-plugin-store = "2.4.2"
 tauri-plugin-os = "2.3.2"
 tauri-plugin-dialog = "2.6.0"
 tauri-plugin-upload = "2.4.0"
+tauri-plugin-shell = "2"
 
