--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: bashellit
 base: core22
-version: '1.0.0'
+version: '1.0.1'
 summary: A minimal and clean editor for Bash scripts.
 description: |
   Bashellit is a lightweight, focused editor designed specifically for writing 
@@ -17,15 +17,16 @@ layout:
 
 apps:
   bashellit:
-    command: usr/bin/Bashellit
-    desktop: usr/share/applications/Bashellit.desktop
-    extensions: [gnome]
-
+    command: usr/bin/bashellit
+    desktop: usr/share/applications/bashellit.desktop
+    extensions: [ gnome ]
+    environment:
+      GDK_GL: disable
 
 package-repositories:
   - type: apt
-    components: [main]
-    suites: [noble]
+    components: [ main ]
+    suites: [ noble ]
     key-id: 78E1918602959B9C59103100F1831DDAFC42E99D
     url: http://ppa.launchpad.net/snappy-dev/snapcraft-daily/ubuntu
 
@@ -46,6 +47,7 @@ parts:
       - libayatana-appindicator3-dev
       - librsvg2-dev
       - dpkg
+      - xdg-utils
     stage-packages:
       - libwebkit2gtk-4.1-0
       - libayatana-appindicator3-1
@@ -59,4 +61,4 @@ parts:
       deno install
       deno run tauri build
       dpkg -x src-tauri/target/release/bundle/deb/*.deb $SNAPCRAFT_PART_INSTALL/
-      sed -i -e "s|Icon=Bashellit|Icon=/usr/share/icons/hicolor/32x32/apps/Bashellit.png|g" $SNAPCRAFT_PART_INSTALL/usr/share/applications/Bashellit.desktop
+      sed -i -e "s|Icon=bashellit|Icon=/usr/share/icons/hicolor/32x32/apps/bashellit.png|g" $SNAPCRAFT_PART_INSTALL/usr/share/applications/bashellit.desktop
