--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "bashellite"
+name = "bashellit"
 version = "0.1.0"
-authors = ["Cyp"]
+authors = ["Cyprien"]
 edition = "2021"
 
 [dependencies]
