--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 syntect = { version = "5.3.0", default-features = false, features = ["parsing", "default-syntaxes", "regex-fancy"] }
 tokio = { version = "1.49.0", features = ["time", "rt"] }
+dirs = "6.0.0"
+dirs-next = "2.0.0"
 
 [features]
 default = ["desktop"]
